# payload-ecommerce-lakehouse-demo

./: .dockerignore  .env.example  .env.just.example  .gitignore  .markdownlint.yaml  .tiltignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  Tiltfile  docker-entrypoint.sh  justfile  mise.toml  next.config.js  package.json  payload.just  pnpm-lock.yaml  tailwind.config.mjs
charts/payload-ecommerce-lakehouse-demo/: Chart.yaml  README.md  values-dev.yaml  values-prod-example.yaml  values.yaml
charts/payload-ecommerce-lakehouse-demo/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
data/ingestion/: .env.local.example  .gitignore  README.md  check_tables.py  env.local.example  justfile  payload_pipeline.py  pyproject.toml  rest_api_pipeline.py
data/ingestion/destinations/: iceberg_rest.py  iceberg_schema.py
data/ingestion/sources/: payload_cms.py
data/seed/: README.md
data/transformation/: .env.local.example  .gitignore  README.md  dbt_project.yml  env.local.example  justfile  profiles.yml  requirements.txt
docs/: .gitignore  analysis_queries.md  analysis_queries_metabase.md  datastack-integration.md  metabase.md  metabase_embedding.md
manifests/: ai-env-external-secret.yaml  metabase-embedding-external-secret.yaml
scripts/: clear-seed.ts  seed.ts
src/: payload.config.ts
src/app/(payload)/: custom.scss
src/app/healthz/: route.ts
src/components/: AIAssistantProvider.tsx  PayloadAdminAIProvider.tsx
src/components/Cart/: DeleteItemButton.tsx  EditItemQuantityButton.tsx
(+46 files in other folders)
