[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.16.0,<1.17",
    "pyarrow>=21.0.0",
    "pyiceberg>=0.10.0",
    "pydantic>=2.11.0,<2.12",
    "s3fs>=2025.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "pyarrow-stubs>=20.0.0.20250928",
    "pyright>=1.1.406",
]
